# libstream

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/stream/: stream.hh
test/: CMakeLists.txt  test.cc
